syntax = "proto3";
package goim_group;
option go_package = "./pb";

enum GroupMemberStatus {
  normal = 0;
  invited = 1;
  banned = 2;
}

enum GroupMemberRole {
  RoleOwner = 0;
  RoleAdmin = 1;
  RoleNormal = 2;
}

// GroupInfo 群聊基本信息 proto
message GroupInfo {
  int64 groupID = 1;
  string name = 2;
  string description = 3;
  int64 ownerID = 4;
  string ownerAccount = 5;
  int64 createTime = 6;
}

// GroupMember 群成员详细信息 proto
message GroupMember{
  int64 userID = 1;
  string Account = 2;
  string NickName = 3;
  int64 joinTime = 4;
  GroupMemberStatus status = 5;
  GroupMemberRole role = 6;
}

message Member {
  int64 userID = 1;
  int64 groupID = 2;
  int64 joinTime = 3;
  GroupMemberStatus status = 4;
  GroupMemberRole role = 5;
}

message CreateGroupRequest{
  string name = 1;
  int64 ownerID = 2;
  string description = 3;
}

message CreateGroupResponse{
  int32 code = 1;
  string message = 2;
  int64 groupID = 3;
}

message ListMembersRequest{
  int64 groupID = 1;
  int32 pageSize = 2;
  int32 page = 3;
}

message ListMembersResponse{
  int32 code = 1;
  string message = 2;
  int32 total = 3;
  repeated GroupMember members = 4;
}

message InviteUserRequest {
  int64 userID = 1;
  int64 groupID = 2;
  int64 inviter = 3;
}

message InviteUserResponse {
  int32 code = 1;
  string message = 2;
}

message AcceptInvitationRequest {
  int64 invitationID = 1;
  int64 userID = 2;
}

message AcceptInvitationResponse {
  int32 code = 1;
  string message = 2;
}

message GetGroupInfoRequest {
  int64 groupID = 1;
}

message GetGroupInfoResponse {
  int32 code = 1;
  string message = 2;
  GroupInfo group = 3;
}

message ListGroupsRequest {
  int64 userID = 1;
}

message ListGroupsResponse {
  int32 code = 1;
  string message = 2;
  repeated GroupInfo groups = 4;
}

message GetGroupMemberRequest {
  int64 userID = 1;
  int64 groupID = 2;
}

message GetGroupMemberResponse {
  int32 code = 1;
  string message = 2;
  Member member = 3;
}

message KickGroupMemberRequest {
  int64 groupID = 1;
  int64 operatorID = 2;
  int64 memberID = 3;
}

message KickGroupMemberResponse {
  int32 code = 1;
  string message = 2;
}

// Group 群聊相关RPC服务
service Group {
  // CreateGroup 创建群聊
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse) {}
  // ListGroupMembers 列出群成员信息
  rpc ListGroupMembers(ListMembersRequest) returns (ListMembersResponse) {}
  // InviteUser 邀请用户进群
  rpc InviteUser(InviteUserRequest) returns (InviteUserResponse) {}
  // AcceptInvitation 接收进群邀请
  rpc AcceptInvitation(AcceptInvitationRequest) returns (AcceptInvitationResponse) {}
  // GetGroupInfo 获取群聊信息
  rpc GetGroupInfo(GetGroupInfoRequest) returns (GetGroupInfoResponse) {}
  // ListGroups 列出用户已经加入的群聊
  rpc ListGroups(ListGroupsRequest) returns (ListGroupsResponse) {}
  // GetGroupMember 获取群成员信息
  rpc GetGroupMember(GetGroupMemberRequest) returns (GetGroupMemberResponse) {}
  // KickGroupMember
  rpc KickGroupMember(KickGroupMemberRequest) returns (KickGroupMemberResponse) {}
}